--- a/practicals/practical14.html
+++ b/practicals/practical14.html
@@ -1,94 +1,373 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/practical-14.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Form Templates</title>
-</head>
-<body>
-    <header>
-        <h1>Form Template</h1>
-    </header>
-    <div class="main-container">
-        <!-- Form Template 1 -->
-        <div class="form-template1">
-            <div class="form-header-t1">
-                <h1>LOGIN</h1>
-                <div class="social">
-                    <i class="fa fa-facebook" aria-hidden="true"></i>
-                    <i class="fa fa-twitter" aria-hidden="true"></i>
-                    <i class="fa fa-google-plus" aria-hidden="true"></i>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../CSS/practical-14.css">
+        <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <title>Form Templates</title>
+        <style>
+            * {
+                margin: 0;
+                padding: 0;
+                box-sizing: border-box;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+            body {
+                background-color: lightgrey;
+                display: flex;
+                flex-direction: column;
+            }
+            header h1 {
+                text-transform: uppercase;
+                color: red;
+                font-size: 80px;
+                text-align: center;
+                margin-top: 30px;
+            }
+            .main-container {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: center;
+            }
+            .form-template1 {
+                width: 300px;
+                height: 350px;
+                background-color: #fff;
+                margin: 20px;
+            }
+            .form-header-t1 {
+                width: 100%;
+                height: 100px;
+                background: linear-gradient(to right, orange, red);
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                align-items: center;
+            }
+            .form-header-t1 h1 {
+                color: white;
+                font-size: 20px;
+                padding: 10px 0;
+            }
+            .form-header-t1 .social i {
+                color: white;
+                font-size: 20px;
+                padding: 10px;
+
+            }
+            .form-container-t1 {
+                padding: 20px;
+            }
+
+            input[type='email'] {
+                outline: none;
+                border: none;
+                border-bottom: 1px solid grey;
+                width: 100%;
+                margin-top: 15px;
+                padding-bottom: 8px;
+            }
+            input[type='password'] {
+                outline: none;
+                border: none;
+                border-bottom: 1px solid grey;
+                width: 100%;
+                margin-top: 15px;
+                padding-bottom: 8px;
+            }
+            .form-container-t1 p {
+                font-size: 12px;
+                color: grey;
+                padding: 20px 0;
+                text-align: right;
+            }
+            .form-container-t1 p b {
+                color: black;
+            }
+            input[type=submit] {
+                outline: none;
+                border: none;
+                border-radius: 20px;
+                background-color: grey;
+                color: white;
+                padding: 10px 20px;
+                margin-top: 30px;
+            }
+            .form-container-t1 p#p2 {
+                display: inline;
+                margin-left: 10px;
+            }
+
+            /* Form 2 */
+            .form-template2 {
+                width: 300px;
+                height: 350px;
+                background-color: #fff;
+                margin: 20px;
+            }
+            .form-header-t2 {
+                background-color: #fff;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                align-items: center;
+            }
+            .form-header-t2 h1 {
+                color: deeppink;
+                font-size: 20px;
+                padding: 10px 0;
+            }
+            .form-container-t2 {
+                padding: 20px;
+            }
+
+            input[type='email'] {
+                outline: none;
+                border: none;
+                border-bottom: 1px solid grey;
+                width: 100%;
+                padding-bottom: 8px;
+            }
+            input[type='password'] {
+                outline: none;
+                border: none;
+                border-bottom: 1px solid grey;
+                width: 100%;
+                padding-bottom: 8px;
+            }
+            input[type='checkbox'] {
+                margin: 20px 0;
+            }
+            .form-container-t2 p {
+                display: inline-block;
+                font-size: 12px;
+                color: grey;
+
+            }
+            .form-container-t2 p b {
+                color: #3498db;
+            }
+            .form-container-t2 input[type=submit] {
+                outline: none;
+                border: none;
+                border-radius: 20px;
+                background-color: deeppink;
+                color: white;
+                padding: 10px 20px;
+                margin-top: 30px;
+            }
+            .form-container-t2 p#p3 {
+                display: inline;
+                margin-left: 10px;
+            }
+            .form-footer-t2 {
+                background-color: #778899;
+                height: 68px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            .form-footer-t2 .social i {
+                color: white;
+                font-size: 20px;
+                padding: 10px;
+
+            }
+
+            /* Form 3 */
+
+            .form-template3 {
+                width: 300px;
+                height: 350px;
+                background-color: #fff;
+                margin: 20px;
+            }
+            .form-header-t3 {
+                background-color: #fff;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                align-items: center;
+            }
+            .form-header-t3 h1 {
+                color: black;
+                font-size: 20px;
+                padding: 10px 0;
+            }
+
+            .form-container-t3 {
+                padding: 20px;
+            }
+
+            input[type='email'] {
+                outline: none;
+                border: none;
+                border-bottom: 1px solid grey;
+                width: 100%;
+                padding-bottom: 8px;
+            }
+            input[type='password'] {
+                outline: none;
+                border: none;
+                border-bottom: 1px solid grey;
+                width: 100%;
+                padding-bottom: 8px;
+            }
+            .form-container-t3 input[type='submit'] {
+                outline: none;
+                border: none;
+                border-radius: 20px;
+                width: 100%;
+                background: linear-gradient(to right, skyblue, blue);
+                color: white;
+                padding: 10px 20px;
+                margin-top: 30px;
+            }
+            .form-container-t3 p {
+                font-size: 12px;
+                color: #3498db;
+                padding: 20px 0;
+                text-align: right;
+            }
+            .form-container-t3 p b {
+                color: #3498db;
+
+            }
+            .form-container-t3 input[type=submit] {
+                outline: none;
+                border: none;
+                border-radius: 20px;
+                width: 100%;
+                display: block;
+                background-color: grey;
+                color: white;
+                padding: 10px 20px;
+                margin-top: 30px;
+            }
+            .form-container-t3 #p4 {
+                /* display: inline ; */
+                margin-left: 10px;
+                color: black;
+                text-align: center;
+            }
+
+            .form-footer-t3 {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            .form-footer-t3 .social {
+                margin-top: -35px;
+            }
+            .form-footer-t3 .social i {
+                color: #3498db;
+                font-size: 20px;
+                width: 70px;
+                text-align: center;
+                border-radius: 20px;
+                padding: 10px;
+                margin-left: 10px;
+                box-shadow: 2px 2px 5px #3498db;
+
+            }
+        </style>
+    </head>
+    <body>
+        <header>
+            <h1>Form Template</h1>
+        </header>
+        <div class="main-container">
+            <!-- Form Template 1 -->
+            <div class="form-template1">
+                <div class="form-header-t1">
+                    <h1>LOGIN</h1>
+                    <div class="social">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                        <i class="fa fa-google-plus" aria-hidden="true"></i>
+                    </div>
+                </div>
+                <div class="form-container-t1">
+                    <div>
+                        <input type="email" name="email" id="mail" placeholder="Your Email">
+                    </div>
+                    <div>
+                        <input type="password" name="pwd" id="pwd" placeholder="Your Password">
+                    </div>
+                    <p>Forgot
+                        <b>Password?</b>
+                    </p>
+                    <input type="submit" value="LOGIN">
+                    <p id="p2">Don't have account?
+                        <b>Sign Up</b>
+                    </p>
+                </div>
+                <div class="form-footer-t1"></div>
+            </div>
+
+            <!-- Form Template 2 -->
+
+            <div class="form-template2">
+                <div class="form-header-t2">
+                    <h1>SIGN UP</h1>
+                </div>
+                <div class="form-container-t2">
+                    <div>
+                        <input type="email" name="email" id="mail" placeholder="Your Email">
+                    </div>
+                    <div>
+                        <input type="password" name="pwd" id="pwd" placeholder="Your Password">
+                    </div>
+                    <input type="checkbox" name="chk" id="chk">
+                    <p>Accept the
+                        <b>
+                            Terms and Conditions</b>
+                    </p>
+                    <input type="submit" value="SIGNUP">
+                    <p id="p3">Have an account?
+                        <b>Sign in</b>
+                    </p>
+                </div>
+                <div class="form-footer-t2">
+                    <div class="social">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                        <i class="fa fa-google-plus" aria-hidden="true"></i>
+                    </div>
                 </div>
             </div>
-            <div class="form-container-t1">
-                <div>
-                    <input type="email" name="email" id="mail" placeholder="Your Email">
+
+            <!-- Form Template 3 -->
+
+            <div class="form-template3">
+                <div class="form-header-t3">
+                    <h1>SIGN IN</h1>
                 </div>
-                <div>
-                    <input type="password" name="pwd" id="pwd" placeholder="Your Password">
+                <div class="form-container-t3">
+                    <div>
+                        <input type="email" name="email" id="mail" placeholder="Your Email">
+                    </div>
+                    <div>
+                        <input type="password" name="pwd" id="pwd" placeholder="Your Password">
+                    </div>
+                    <p>Forgot
+                        <b>Password?</b>
+                    </p>
+                    <input type="submit" value="SIGN IN">
+                    <p id="p4">Or sign in with:</p>
                 </div>
-                <p>Forgot <b>Password?</b></p>
-                <input type="submit" value="LOGIN">
-                <p id="p2">Don't have account? <b>Sign Up</b></p>
-            </div>
-            <div class="form-footer-t1">
+                <div class="form-footer-t3">
+                    <div class="social">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                        <i class="fa fa-google-plus" aria-hidden="true"></i>
+                    </div>
+                </div>
             </div>
         </div>
-
-        <!-- Form Template 2 -->
-        
-        <div class="form-template2">
-            <div class="form-header-t2">
-                <h1>SIGN UP</h1>   
-            </div>
-            <div class="form-container-t2">
-                <div>
-                    <input type="email" name="email" id="mail" placeholder="Your Email">
-                </div>
-                <div>
-                    <input type="password" name="pwd" id="pwd" placeholder="Your Password">
-                </div>
-                <input type="checkbox" name="chk" id="chk">
-                <p>Accept the <b> Terms and Conditions</b></p>
-                <input type="submit" value="SIGNUP">
-                <p id="p3">Have an account? <b>Sign in</b></p>
-            </div>
-            <div class="form-footer-t2">
-                <div class="social">
-                    <i class="fa fa-facebook" aria-hidden="true"></i>
-                    <i class="fa fa-twitter" aria-hidden="true"></i>
-                    <i class="fa fa-google-plus" aria-hidden="true"></i>
-                </div>
-            </div>
-        </div>
-
-        <!-- Form Template 3 -->
-
-        <div class="form-template3">
-            <div class="form-header-t3">
-                <h1>SIGN IN</h1>
-            </div>
-            <div class="form-container-t3">
-                <div>
-                    <input type="email" name="email" id="mail" placeholder="Your Email">
-                </div>
-                <div>
-                    <input type="password" name="pwd" id="pwd" placeholder="Your Password">
-                </div>
-                <p>Forgot <b>Password?</b></p>
-                <input type="submit" value="SIGN IN">
-                <p id="p4">Or sign in with:</p>
-            </div>
-            <div class="form-footer-t3">
-                <div class="social">
-                    <i class="fa fa-facebook" aria-hidden="true"></i>
-                    <i class="fa fa-twitter" aria-hidden="true"></i>
-                    <i class="fa fa-google-plus" aria-hidden="true"></i>
-                </div>
-            </div>
-        </div>
-    </div>
-</body>
+    </body>
 </html>
